Automatically strip spaces for DNS servers and domains

BUG:333650